[package]
name = "mongo-rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
bson = "2.0.0"
mongodb = { version = "2.0.0", features = ["tokio-runtime", "bson-uuid-0_8"] }
serde = "1.0.193"
serde_json = "1.0.92"
tokio = { version = "1.35.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
futures = { version =  "0.3.29", features = ["async-await"] }